2771
smaller test case:
```scala
import scala.collection._
import scala.collection.generic._

abstract class ManagedSeqStrict[+A]
        extends Traversable[A]
        with GenericTraversableTemplate[A, ManagedSeqStrict]

trait ManagedSeq[+A, +Coll]
        extends ManagedSeqStrict[A]
        with TraversableView[A, ManagedSeqStrict[A]]
        with TraversableViewLike[A, ManagedSeqStrict[A], ManagedSeq[A/*ERROR: too few type args*/]]
{ self =>
  trait Transformed[+B] extends ManagedSeq[B, Coll] with super.Transformed[B]

  trait Sliced extends Transformed[A] with super.Sliced
}
```

error message: 
```scala
/Users/adriaan/git/scala/test/pending/pos/t2641.scala:11: error: illegal cyclic reference involving trait ManagedSeq
        with TraversableViewLike[A, ManagedSeqStrict[A], ManagedSeq[A/*ERROR: too few type args*/]]
                                                         ^
/Users/adriaan/git/scala/test/pending/pos/t2641.scala:9: error: illegal inheritance;
 self-type ManagedSeq does not conform to ManagedSeqStrict[A]'s selftype ManagedSeqStrict[A]
        extends ManagedSeqStrict[A]
                ^
/Users/adriaan/git/scala/test/pending/pos/t2641.scala:10: error: illegal inheritance;
 self-type ManagedSeq does not conform to scala.collection.TraversableView[A,ManagedSeqStrict[A]]'s selftype scala.collection.TraversableView[A,ManagedSeqStrict[A]]
        with TraversableView[A, ManagedSeqStrict[A]]
             ^
/Users/adriaan/git/scala/test/pending/pos/t2641.scala:11: error: illegal inheritance;
 self-type ManagedSeq does not conform to scala.collection.TraversableViewLike[A,ManagedSeqStrict[A],<error>]'s selftype scala.collection.TraversableViewLike[A,Coll,This]
        with TraversableViewLike[A, ManagedSeqStrict[A], ManagedSeq[A/*ERROR: too few type args*/]]
             ^
/Users/adriaan/git/scala/test/pending/pos/t2641.scala:9: error: illegal inheritance;
 self-type ManagedSeq does not conform to ScalaObject's selftype ScalaObject
        extends ManagedSeqStrict[A]
        ^
/Users/adriaan/git/scala/test/pending/pos/t2641.scala:13: error: something is wrong (wrong class file?): trait ManagedSeq with type parameters [A,Coll] gets applied to arguments [], phase = typer
  trait Transformed[+B] extends ManagedSeq[B, Coll] with super.Transformed[B]
        ^
/Users/adriaan/git/scala/test/pending/pos/t2641.scala:15: error: something is wrong (wrong class file?): trait ManagedSeq with type parameters [A,Coll] gets applied to arguments [], phase = namer
  trait Sliced extends Transformed[A] with super.Sliced
               ^
Exception in thread "main" java.lang.NullPointerException
	at scala.tools.nsc.typechecker.Typers$$Typer.parentTypes(Typers.scala:1104)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedClassDef(Typers.scala:1283)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:3645)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3973)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:4018)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedStat$$1(Typers.scala:2014)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$19.apply(Typers.scala:2073)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$19.apply(Typers.scala:2073)
	at scala.collection.immutable.List.loop$$1(List.scala:109)
	at scala.collection.immutable.List.mapConserve(List.scala:126)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedStats(Typers.scala:2073)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedTemplate(Typers.scala:1481)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedClassDef(Typers.scala:1283)
```
